# searcherator

./: .gitignore  README.MD  example.py  pyproject.toml  requirements.txt  test_progress.py  test_searcherator.py
.ai-docs/: aiohttp.md  cacherator.md  ghostscraper.md  logorator.md
searcherator/: __init__.py  searcherator.py
